@@ -313,7 +313,7 @@ init_counter_updates(void)
 // Record that a number of bytes and files have been added to the cache. Size
 // is in bytes.
 void
-stats_update_size(uint64_t size, unsigned files)
+stats_update_size(int64_t size, int files)
 {
 	init_counter_updates();
 	counter_updates->data[STATS_NUMFILES] += files;
